<?xml version="1.0"?>
<package format="3">
  <name>auto_drive_pkg</name>
  <version>0.0.0</version>
  <description>Auto driving node using vision_msgs/LaneInfo</description>
  <maintainer email="you@example.com">You</maintainer>
  <license>TODO</license>

  <!-- 빌드 도구 -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 의존 패키지 -->
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
