<?xml version="1.0"?>
<package format="3">
  <name>auto_drive_pkg</name>
  <version>0.0.1</version>
  <description>Autonomous driving node using custom_interfaces/PacketProtocol</description>
  <maintainer email="you@example.com">You</maintainer>
  <license>MIT</license>

  <!-- 빌드 도구 -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 빌드/실행 의존성 -->
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>custom_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
