<?xml version="1.0"?>
<package format="3">
  <name>auto_driving_node</name>
  <version>0.0.0</version>
  <description>Auto driving node using vision_msgs/LaneInfo</description>
  <maintainer email="you@example.com">You</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>vision_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
