<?xml version="1.0"?>
<package format="3">
  <name>custom_interfaces</name>
  <version>0.0.1</version>
  <description>Custom message definitions for autonomous driving</description>
  <maintainer email="you@example.com">You</maintainer>
  <license>MIT</license>

  <!-- 필수 빌드 도구 -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 메시지 생성용 의존성 -->
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>std_msgs</build_depend>

  <!-- 실행 의존성 -->
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
